Resolves: fdo#77831 use classic token rules for user-defined char (%foo)

Change-Id: Iebae064986ad722d445c8d654e39e338e104f021